# facet-git-tree

./: .gitignore  .rules  CONTRIBUTING.md  Cargo.toml  README.md
.config/: committed.toml  release-please-config.json
.github/workflows/: CD.yml  CI.yml
crates/facet-git-tree/: Cargo.toml
crates/facet-git-tree/examples/: build_cache.rs  code_review.rs  enums_and_options.rs  issues.rs  roundtrip.rs  struct_to_tree.rs
crates/facet-git-tree/src/: lib.rs
crates/facet-git-tree/tests/: byte_sequences.rs  check_key.rs  collections.rs  deserialize_errors.rs  leaves.rs  normalization.rs  object_store.rs  ordinals.rs  pointers.rs  recursive.rs  roundtrip.rs  schema_cycles.rs  serialization.rs  structural.rs  variants.rs
crates/facet-git-tree/tests/common/: mod.rs
docs/: acdc-requirement.adoc  specification.adoc
