[package]
name = "facet-git-tree"
version = "0.1.0"
edition = "2024"

[dependencies]
facet = { version = "0.50.0-rc.0", features = ["reflect"] }
gix-hash = { version = "0.25.1", features = ["sha1"] }
gix-object = "0.61.0"
gix-odb = "0.81.0"
thiserror = "2"

[dev-dependencies]
proptest = "1"
rstest = "0.26"
